test/integration/bad/examples-bad/new/ill-formed-statement31.stan
transformed data { increment_log_prob ( T ) while